--- a/src/css/home.css
+++ b/src/css/home.css
@@ -8,7 +8,7 @@ height: auto;
 .homepage .static-frame {
 width: 100%;
 height: 236px;
-background: #343434;
+background: #5f1910;
 }
 
 .homepage .static-frame .info {
@@ -231,18 +231,19 @@ font-weight: 500;
 
 .homepage .ads-restaurant-frame {
   width: 100%;
-  height: 693px;
+  height: 543px;
   display: flex;
   overflow: hidden;
   transform: perspective(0px);
-  box-shadow: -3px 0px 20px 14px #34343480;
+  box-shadow: -3px 0px 20px 14px #fcfcfc80;
 }
 
 .homepage .ads-restaurant-frame .ads-video {
   width: 100%;
-  background: #0c0e12;
+  height: 500px;
+  background: #f3f3f3;
   display: flex;
-  box-shadow: 0px -8px 90px rgb(215 215 255);
+  box-shadow: 0px -8px 90px rgb(162, 172, 58);
   transform: scale(1.5);
   overflow: hidden;
 }
