--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,199 +1,242 @@
+
 .home-navbar {
     width: 100%;
     height: 773px;
     display: flex;
-    background: url("/public/img/banner.webp");
-    background-size: cover;
+    background: linear-gradient(-30deg, #1c1a45, #133768);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+    position: relative;
 }
 
-  .home-navbar .navbar-container{
+.home-navbar::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: url("/public/img/fon2.jpg");
+    background-size: cover;
+    opacity: 0.3;
+    z-index: 0;
+}
+
+@keyframes gradient {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+}
+
+.home-navbar .navbar-container {
     margin-top: 55px;
-    height : 642px;
+    height: 642px;
+    position: relative;
+    z-index: 1;
+}
 
+.home-navbar .navbar-container .menu {
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
 
-  }
-    .home-navbar .navbar-container .menu {
-  height: 50px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-
-  }
-
-  .home-navbar .navbar-container .menu .brand-logo {
-    width: 505px;
-    height: 30px;
-    font-size: 45px;
-     flex-direction: row;
+.home-navbar .navbar-container .menu .brand-logo {
+    width: 120px;
+    height: 120px;
+    font-size: 451px;
+    flex-direction: row;
     font-family: "Roboto Serif";
     font-style: normal;
     font-weight: 2000;
     line-height: normal;
-    color: #c4b061;
+background: url("/public/icons/LOGO.png");
+    -webkit-background-clip: text;
+}
 
-  }
-
-  .home-navbar .navbar-container .menu .links{
+.home-navbar .navbar-container .menu .links {
     min-width: 700px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center ;
+    align-items: center;
+}
 
-  }
+.home-navbar .navbar-container .menu .links .login-button {
+    background: linear-gradient(135deg, #b71f1d 0%, #770505 100%);
+    color: #ffffff;
+    border-radius: 25px;
+    padding: 10px 30px;
+    font-weight: 600;
+    text-transform: none;
+    box-shadow: 0 4px 15px rgba(228, 229, 231, 0.4);
+    transition: all 0.3s ease;
+}
 
-  .home-navbar .navbar-container .menu .links .login-button {
-    background: #3776CC;
-     color: #f8f8ff;
+.home-navbar .navbar-container .menu .links .login-button:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 6px 20px rgba(236, 237, 240, 0.6);
+}
 
-  }
-
-   .home-navbar .navbar-container .menu .user-avatar{
+.home-navbar .navbar-container .menu .user-avatar {
     width: 50px;
     height: 50px;
-    border-radius: 24px;
- 
-  }
+    border-radius: 50%;
+    border: 3px solid #ebe1e1;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 0 4px 15px rgba(230, 231, 237, 0.3);
+}
 
-  
+.home-navbar .navbar-container .menu .user-avatar:hover {
+    transform: scale(1.1);
+    border-color: #ffd89b;
+    box-shadow: 0 6px 20px rgba(255, 216, 155, 0.5);
+}
+
+.home-navbar a {
+    text-decoration: none;
+}
+
+.home-navbar .hover-line a {
+    color: #ffffff;
+    z-index: 100;
+    font-weight: 500;
+    font-size: 16px;
+    transition: color 0.3s ease;
+}
+
+.home-navbar .hover-line a:hover {
+    color: #dbc97d;
+}
 
 
-    .home-navbar a {
-     text-decoration: none;
-    }
 
-    .home-navbar .hover-line a {
-     color :#f8f8ff;
-     z-index: 100;
-
-    }
-
-    .home-navbar .underline {
-        display: block;
-        content: "";
-        border-bottom: solid 2px  #d7b686 ;
-
-    }
-
-    .home-navbar .hover-line:after {
-     display: block;
-     content: "";
-      border-bottom: solid 2px #d7b686;
-     transform: scaleX(0);
+.home-navbar .hover-line:after {
+    display: block;
+    content: "";
+    border-bottom: solid 3px #e7ca4d;
+    transform: scaleX(0);
     transition: transform 250ms ease-in-out;
-    }
+    box-shadow: 0 2px 8px rgba(255, 216, 155, 0.5);
+}
 
 .home-navbar .hover-line:hover:after {
-  transform: scaleX(1);
+    transform: scaleX(1);
 }
 
 .home-navbar div.hover-line:after {
-  transform-origin: 0% 50%;
+    transform-origin: 0% 50%;
 }
 
 .home-navbar .navbar-container .header-frame {
-  margin-top: 142px;
-  height: 462px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  
+    margin-top: 142px;
+    height: 462px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .home-navbar .navbar-container .header-frame .detail {
- width: 510px;
- display: flex;
- flex-direction: column;
-
-  
+    width: 510px;
+    display: flex;
+    flex-direction: column;
 }
-
 
 .home-navbar .navbar-container .header-frame .detail .head-main-txt {
-  width: 450px;
-  height: 150px ;
- font-family: "Roboto Serif";
- font-size: 50px;
- font-style: normal;
- font-weight: 500;
- line-height: normal;
- letter-spacing: -0.75px;
-  color : #f8f8ff;
- 
+    width: 450px;
+    height: 150px;
+    font-family: "Roboto Serif";
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: -0.75px;
+    color: #ffffff;
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
 }
-
 
 .home-navbar .navbar-container .header-frame .detail .well-txt {
-  width: 510px;
-  height: 42px ;
- font-family: "Roboto Serif";
- font-size: 36px;
- font-style: normal;
- font-weight: 400;
- line-height: normal;
- letter-spacing: -0.54px;
-  color : #D7B686;
+    width: 510px;
+    height: 42px;
+    font-family: "Roboto Serif";
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.54px;
+    background: linear-gradient(135deg, #ffd89b 0%, #19547b 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
 }
 
-.home-navbar .navbar-container .header-frame .detail .servise-txt{
-  margin-top: 23px;
-  width: 153px;
-  height: 23px ;
- font-family: "Roboto Serif";
- font-size: 20px;
- font-style: normal;
- font-weight: 400;
- line-height: normal;
- letter-spacing: -0.3px;
-  color : #d5d5d5;
+.home-navbar .navbar-container .header-frame .detail .servise-txt {
+    margin-top: 23px;
+    width: 153px;
+    height: 23px;
+    font-family: "Roboto Serif";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.3px;
+    color: #e0e0e0;
 }
 
 .home-navbar .navbar-container .detail .signup {
-  margin-top: 73px;
-
+    margin-top: 73px;
 }
-.home-navbar .navbar-container .detail  .signup .signup-button {
-width:         210px;
-height:        60px;
-border-radius: 4px;
-background:    #1976d2;
-text-align:    center;
-font-family:   Poppins;
-font-size:     17px;
-font-style:    normal;
-font-weight:   400;
-line-height:   normal;
-color:         #f8f8ff;
 
+.home-navbar .navbar-container .detail .signup .signup-button {
+    width: 210px;
+    height: 60px;
+    border-radius: 30px;
+    background: linear-gradient(135deg, #ee2708 0%, #4835c6 100%);
+    text-align: center;
+    font-family: "Roboto Serif";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    color: #ffffff;
+    text-transform: none;
+    box-shadow: 2px 2px 20px rgb(232, 182, 35);
+    transition: all 0.3s ease;
+}
+
+.home-navbar .navbar-container .detail .signup .signup-button:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.6);
+    background: linear-gradient(135deg, #db918e 0%, #6e4540 100%);
 }
 
 .home-navbar .navbar-container .logo-frame {
-  margin-top: 43px;
-  width: 690px;
-  height: 419px;
-
+    margin-top: 43px;
+    width: 690px;
+    height: 419px;
 }
-
-.home-navbar .navbar-container .logo-frame {
-  margin-top: 43px;
-  width: 690px;
-  height: 419px;
-  
-}
-
 
 .home-navbar .navbar-container .logo-frame .logo-img {
- width: 100%;
- height: 100% ;
- background: url("/public/img/logo.webp");
- background-size: contain;
- background-repeat: no-repeat;
- filter: invert(25%);
-
+    width: 100%;
+    height: 100%;
+    width: 400px;
+    height: 400px;
+    margin-left: 301px;
+    background: url("/public/icons/LOGO.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    filter: drop-shadow(0 8px 16px rgba(0, 0, 0, 0.3));
+    animation: float 3s ease-in-out infinite;
 }
 
-
+@keyframes float {
+    0%, 100% { transform: translateY(0px); }
+    50% { transform: translateY(-20px); }
+}
+ 
 
 
 
@@ -205,8 +248,8 @@ color:         #f8f8ff;
     width: 100%;
     height: 400px;
     display: flex;
-    background: url("/public/img/banner.webp");
-    background-size: cover;
+    background: url("/public/img/fon2.jpg");
+     background-size: cover;
 }
 
 .other-navbar .navbar-container {
@@ -223,8 +266,8 @@ color:         #f8f8ff;
 }
 
 .other-navbar .navbar-container .menu .brand-logo {
-    width: 125px;
-    height: 30px;
+    width: 100px;
+    height: 100px;
 }
 
 .other-navbar .navbar-container .menu .links {
@@ -285,17 +328,16 @@ color:         #f8f8ff;
 
 
 
-
 /* BASKET */
 
 .basket-frame {
   position: relative;
-  padding: 10px 4px 0px 4px;
+  padding: 20px 4px 2px 4px;
   width: 450px;
   height: auto;
   display: flex;
   flex-direction: column;
-  background: #f8f8ff;
+  background: #75520a;
   border-radius: 16px;
 }
 
@@ -345,9 +387,9 @@ color:         #f8f8ff;
   font-family: "Poppins";
   font-style: normal;
   font-weight: 600;
-  font-size: 15px;
+  font-size: 20px;
   line-height: 22px;
-  color: #ae0000;
+  color: #020202;
 }
 
 .basket-info-box
